# wptinterop

./: Cargo.toml
.github/: dependabot.yml
.github/workflows/: python.yml  test.yml  update_scores.yml
ci/: test.sh  update-scores.sh
core/: Cargo.toml
core/src/: lib.rs  metadata.rs
python/: Cargo.toml  pyproject.toml
python/python/interop_score/: command_line.py  score.py
python/python/wpt_interop/: _wpt_interop.pyi  command_line.py  interop_score.py  main.py  metadata.py  regressions.py  repo.py  runs.py  score.py
python/src/: lib.rs
