[package]
name = "wpt-interop"
version = "0.2.0"
edition = "2021"
authors = ["James Graham <james@hoppipolla.co.uk>"]
description="web-platform-tests Interop helpers"
readme = "README.md"
license = "BSD-3-Clause"

[lib]
name = "wpt_interop"

[dependencies]
git2 = "0.18"
serde = "1"
serde_json = "1"
serde_derive = "1"
thiserror = "1"
urlencoding = "2"