[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "interop-score"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
install_requires = [
  "requests"
]

[project.scripts]
score = "interop_score:command_line.main"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "interop_score._interop_score"