[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "wpt-interop"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
install_requires = [
  "requests"
]

[project.scripts]
interop-score = "wpt_interop:command_line.main"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "wpt_interop._wpt_interop"